Updated java args